--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   image_picker: ^1.0.2
   tflite: any
+  animated_text_kit: ^4.2.1
+  device_preview:
+  expandable_page_view:
 
 
 dev_dependencies:
