--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
   animated_text_kit: ^4.2.1
   device_preview:
   expandable_page_view:
+  flutter_spinkit: ^5.0.0
+  flutter_typeahead:
+  url_launcher: ^6.0.0
+
+
 
 
 dev_dependencies:
